--- a/examples/linearRelation.ipynb
+++ b/examples/linearRelation.ipynb
@@ -1,8 +1,36 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Linear Relation Visualization\n",
+    "\n",
+    "> This function considers linear relationships between two pollutants. The relationships\n",
+    "are calculated on different times bases using a linear model. The slope and 95 %\n",
+    "confidence interval in slope relationships by time unit are plotted in several different\n",
+    "ways. The function is particularly useful when considering whether relationships are\n",
+    "consistent with emissions inventories.\n",
+    "The relationships between pollutants can yield some very useful information about\n",
+    "source emissions and how they change. A scatter plot between two pollutants is\n",
+    "the usual way to investigate the relationship. A linear regression is useful to test the\n",
+    "strength of the relationship. However, considerably more information can be gleaned\n",
+    "by considering different time periods, such as how the relationship between two\n",
+    "pollutants vary over time, by day of the week, diurnally and so on. The linearRelation\n",
+    "function does just that — it fits a linear relationship between two pollutants over a wide\n",
+    "range of time periods determined by period."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Standard libraries to be imported for usage"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,20 +41,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "year = ['1998','1999','2000','2001','2002','2003','2004','2005']\n",
-    "df = pd.read_csv(\"mydata.csv\")\n",
-    "# df.index= pd.to_datetime(df.date)\n",
-    "# df = df.drop(\"date\", axis=1)"
+    "Reading the data and using the function from the library."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -43,16 +66,9 @@
     }
    ],
    "source": [
+    "df = pd.read_csv(\"mydata.csv\")\n",
+    "\n",
     "linearRelation(df, 'nox', 'so2')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "linearRelation?"
    ]
   },
   {
