--- a/examples/summaryPlot.ipynb
+++ b/examples/summaryPlot.ipynb
@@ -1,210 +1,55 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Summary Plot\n",
+    "> The summaryPlot function is a way of rapidly summarising important aspects of data.\n",
+    "While many statistical summaries are possible to calculate with Python, the summaryPlot\n",
+    "function has been written specifically for monitoring data. The function provides key\n",
+    "graphical and statistical summaries."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Standard libraries to be imported for usage"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "class color:\n",
-    "   BOLD = '\\033[1m'\n",
-    "   UNDERLINE = '\\033[4m'\n",
-    "   END = '\\033[0m'\n",
-    "\n",
     "from vayu import summaryPlot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>ws</th>\n",
-       "      <th>wd</th>\n",
-       "      <th>nox</th>\n",
-       "      <th>no2</th>\n",
-       "      <th>o3</th>\n",
-       "      <th>pm10</th>\n",
-       "      <th>so2</th>\n",
-       "      <th>co</th>\n",
-       "      <th>pm25</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>01/01/1998 00:00</td>\n",
-       "      <td>0.60</td>\n",
-       "      <td>280.0</td>\n",
-       "      <td>285.0</td>\n",
-       "      <td>39.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>4.7225</td>\n",
-       "      <td>3.3725</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>01/01/1998 01:00</td>\n",
-       "      <td>2.16</td>\n",
-       "      <td>230.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>37.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>01/01/1998 02:00</td>\n",
-       "      <td>2.76</td>\n",
-       "      <td>190.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>6.8300</td>\n",
-       "      <td>9.6025</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>01/01/1998 03:00</td>\n",
-       "      <td>2.16</td>\n",
-       "      <td>170.0</td>\n",
-       "      <td>493.0</td>\n",
-       "      <td>52.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>7.6625</td>\n",
-       "      <td>10.2175</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>01/01/1998 04:00</td>\n",
-       "      <td>2.40</td>\n",
-       "      <td>180.0</td>\n",
-       "      <td>468.0</td>\n",
-       "      <td>78.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>8.0700</td>\n",
-       "      <td>8.9125</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               date    ws     wd    nox   no2   o3  pm10     so2       co  \\\n",
-       "0  01/01/1998 00:00  0.60  280.0  285.0  39.0  1.0  29.0  4.7225   3.3725   \n",
-       "1  01/01/1998 01:00  2.16  230.0    NaN   NaN  NaN  37.0     NaN      NaN   \n",
-       "2  01/01/1998 02:00  2.76  190.0    NaN   NaN  3.0  34.0  6.8300   9.6025   \n",
-       "3  01/01/1998 03:00  2.16  170.0  493.0  52.0  3.0  35.0  7.6625  10.2175   \n",
-       "4  01/01/1998 04:00  2.40  180.0  468.0  78.0  2.0  34.0  8.0700   8.9125   \n",
-       "\n",
-       "   pm25  \n",
-       "0   NaN  \n",
-       "1   NaN  \n",
-       "2   NaN  \n",
-       "3   NaN  \n",
-       "4   NaN  "
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df = pd.read_csv('mydata.csv')\n",
-    "# df.index= pd.to_datetime(df.date)\n",
-    "# df = df.drop(\"date\", axis=1)\n",
-    "# df_2003= df.resample(\"1D\")\n",
-    "# df_2003 = df_2003.fillna(method='ffill')\n",
-    "# dataPoints = ['pm25','co','so2','pm10','o3','no2','nox','wd','ws']\n",
-    "#print(df_2003)\n",
-    "df.head()"
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reading the data and using the function from the library."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/apoorv/Desktop/github/.env/lib/python3.6/site-packages/numpy/lib/histograms.py:829: RuntimeWarning: invalid value encountered in greater_equal\n",
-      "  keep = (tmp_a >= first_edge)\n",
-      "/home/apoorv/Desktop/github/.env/lib/python3.6/site-packages/numpy/lib/histograms.py:830: RuntimeWarning: invalid value encountered in less_equal\n",
-      "  keep &= (tmp_a <= last_edge)\n",
-      "/home/apoorv/Desktop/github/.env/lib/python3.6/site-packages/numpy/lib/histograms.py:829: RuntimeWarning: invalid value encountered in greater_equal\n",
-      "  keep = (tmp_a >= first_edge)\n",
-      "/home/apoorv/Desktop/github/.env/lib/python3.6/site-packages/numpy/lib/histograms.py:830: RuntimeWarning: invalid value encountered in less_equal\n",
-      "  keep &= (tmp_a <= last_edge)\n",
-      "/home/apoorv/Desktop/github/.env/lib/python3.6/site-packages/numpy/lib/histograms.py:829: RuntimeWarning: invalid value encountered in greater_equal\n",
-      "  keep = (tmp_a >= first_edge)\n",
-      "/home/apoorv/Desktop/github/.env/lib/python3.6/site-packages/numpy/lib/histograms.py:830: RuntimeWarning: invalid value encountered in less_equal\n",
-      "  keep &= (tmp_a <= last_edge)\n",
-      "/home/apoorv/Desktop/github/.env/lib/python3.6/site-packages/numpy/lib/histograms.py:829: RuntimeWarning: invalid value encountered in greater_equal\n",
-      "  keep = (tmp_a >= first_edge)\n",
-      "/home/apoorv/Desktop/github/.env/lib/python3.6/site-packages/numpy/lib/histograms.py:830: RuntimeWarning: invalid value encountered in less_equal\n",
-      "  keep &= (tmp_a <= last_edge)\n",
-      "/home/apoorv/Desktop/github/.env/lib/python3.6/site-packages/numpy/lib/histograms.py:829: RuntimeWarning: invalid value encountered in greater_equal\n",
-      "  keep = (tmp_a >= first_edge)\n",
-      "/home/apoorv/Desktop/github/.env/lib/python3.6/site-packages/numpy/lib/histograms.py:830: RuntimeWarning: invalid value encountered in less_equal\n",
-      "  keep &= (tmp_a <= last_edge)\n",
-      "/home/apoorv/Desktop/github/.env/lib/python3.6/site-packages/numpy/lib/histograms.py:829: RuntimeWarning: invalid value encountered in greater_equal\n",
-      "  keep = (tmp_a >= first_edge)\n",
-      "/home/apoorv/Desktop/github/.env/lib/python3.6/site-packages/numpy/lib/histograms.py:830: RuntimeWarning: invalid value encountered in less_equal\n",
-      "  keep &= (tmp_a <= last_edge)\n",
-      "/home/apoorv/Desktop/github/.env/lib/python3.6/site-packages/numpy/lib/histograms.py:829: RuntimeWarning: invalid value encountered in greater_equal\n",
-      "  keep = (tmp_a >= first_edge)\n",
-      "/home/apoorv/Desktop/github/.env/lib/python3.6/site-packages/numpy/lib/histograms.py:830: RuntimeWarning: invalid value encountered in less_equal\n",
-      "  keep &= (tmp_a <= last_edge)\n",
-      "/home/apoorv/Desktop/github/.env/lib/python3.6/site-packages/numpy/lib/histograms.py:829: RuntimeWarning: invalid value encountered in greater_equal\n",
-      "  keep = (tmp_a >= first_edge)\n",
-      "/home/apoorv/Desktop/github/.env/lib/python3.6/site-packages/numpy/lib/histograms.py:830: RuntimeWarning: invalid value encountered in less_equal\n",
-      "  keep &= (tmp_a <= last_edge)\n",
-      "/home/apoorv/Desktop/github/.env/lib/python3.6/site-packages/numpy/lib/histograms.py:829: RuntimeWarning: invalid value encountered in greater_equal\n",
-      "  keep = (tmp_a >= first_edge)\n",
-      "/home/apoorv/Desktop/github/.env/lib/python3.6/site-packages/numpy/lib/histograms.py:830: RuntimeWarning: invalid value encountered in less_equal\n",
-      "  keep &= (tmp_a <= last_edge)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -297,6 +142,7 @@
     }
    ],
    "source": [
+    "df = pd.read_csv('mydata.csv')\n",
     "summaryPlot(df)"
    ]
   },
