--- a/examples/timePlot.ipynb
+++ b/examples/timePlot.ipynb
@@ -1,21 +1,42 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Time Plot\n",
+    "\n",
+    "> The timePlot function is designed to quickly plot time series of data, perhaps for\n",
+    "several pollutants or variables. This is, or should be, a very common task in the analysis\n",
+    "of air pollution. In doing so, it is helpful to be able to plot several pollutants at the same\n",
+    "time (and maybe other variables) and quickly choose the time periods of interest. It\n",
+    "will plot time series of type Date and hourly and high time resolution data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Standard libraries to be imported for usage"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# -*- coding: utf-8 -*-\n",
-    "\"\"\"\n",
-    "Created on Sun Jul 21 21:50:55 2019\n",
-    "\n",
-    "@author: Man Vinayaka\n",
-    "\"\"\"\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from vayu import timePlot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reading the data and using the function from the library."
    ]
   },
   {
@@ -44,8 +65,8 @@
     }
    ],
    "source": [
-    "mydata = pd.read_csv('mydata.csv')\n",
-    "print(timePlot(mydata,'2003',8))"
+    "Reading the data and using the function from the library.mydata = pd.read_csv('mydata.csv')\n",
+    "print(timePlot(mydata,'2003', 8))"
    ]
   },
   {
