--- a/examples/timeProp.ipynb
+++ b/examples/timeProp.ipynb
@@ -1,6 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Time Prop\n",
+    "\n",
+    "> The timeProp (‘time proportion’) function shows time series plots as stacked bar charts.\n",
+    "For a particular time, proportions of a chosen variable are shown as a stacked bar\n",
+    "chart. The different categories in the bar chart are made up from a character or factor\n",
+    "variable in a data frame."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Standard libraries to be imported for usage"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -13,18 +32,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "file = \"mydata.csv\"\n",
-    "df = pd.read_csv(file)"
+    "Reading the data and using the function from the library."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -41,6 +57,9 @@
     }
    ],
    "source": [
+    "file = \"mydata.csv\"\n",
+    "df = pd.read_csv(file)\n",
+    "\n",
     "timeProp(df, '2003', 'so2')"
    ]
   },
