--- a/examples/timeVariation.ipynb
+++ b/examples/timeVariation.ipynb
@@ -1,6 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Time Variation\n",
+    "\n",
+    "> In air pollution, the variation of a pollutant by time of day and day of week can reveal\n",
+    "useful information concerning the likely sources. For example, road vehicle emissions\n",
+    "tend to follow very regular patterns both on a daily and weekly basis. By contrast\n",
+    "some industrial emissions or pollutants from natural sources (e.g. sea salt aerosol)\n",
+    "may well have very different patterns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Standard libraries to be imported for usage"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -8,6 +28,13 @@
    "source": [
     "import pandas as pd\n",
     "from vayu import timeVariation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reading the data and using the function from the library."
    ]
   },
   {
