--- a/examples/trendLevel.ipynb
+++ b/examples/trendLevel.ipynb
@@ -1,15 +1,27 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
+    "# Trend Level\n",
     "\n",
-    "from vayu import trendLevel"
+    "> The trendLevel function provides a way of rapidly showing a large amount of data in\n",
+    "a condensed way. It is particularly useful for plotting the level of a value against two\n",
+    "categorical variables. These categorical variables can pre-exist in a data set or be\n",
+    "made on the fly using openair. By default it will show the mean value of a variable\n",
+    "against two categorical variables but can also consider a wider range of statistics e.g.\n",
+    "the maximum, frequency, or indeed a user-defined function. The function is much\n",
+    "more flexible than this by showing temporal data and can plot ‘heat maps’ in many\n",
+    "flexible ways. Both continuous colour scales and user-defined categorical scales can\n",
+    "be used."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Standard libraries to be imported for usage"
    ]
   },
   {
@@ -18,12 +30,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"mydata.csv\")\n"
+    "import pandas as pd\n",
+    "\n",
+    "from vayu import trendLevel"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reading the data and using the function from the library.\n",
+    "\n",
+    "Below the graph shows the trend with the x-axis being the month of the year and the y-axis shows the hour of the day. We are clearly able to see the most pollution can be found during the day time. Furthermore, we can infer that November and December are particularly bad."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -31,16 +54,16 @@
     {
      "data": {
       "text/plain": [
-       "array([<matplotlib.axes._subplots.AxesSubplot object at 0x7f29bb31f630>,\n",
-       "       <matplotlib.axes._subplots.AxesSubplot object at 0x7f29b9284b38>,\n",
-       "       <matplotlib.axes._subplots.AxesSubplot object at 0x7f29b923bf60>,\n",
-       "       <matplotlib.axes._subplots.AxesSubplot object at 0x7f29b91f83c8>,\n",
-       "       <matplotlib.axes._subplots.AxesSubplot object at 0x7f29b92287f0>,\n",
-       "       <matplotlib.axes._subplots.AxesSubplot object at 0x7f29b91dbc18>],\n",
+       "array([<matplotlib.axes._subplots.AxesSubplot object at 0x7f2fcf6ae6a0>,\n",
+       "       <matplotlib.axes._subplots.AxesSubplot object at 0x7f2fcd3cbba8>,\n",
+       "       <matplotlib.axes._subplots.AxesSubplot object at 0x7f2fcd382fd0>,\n",
+       "       <matplotlib.axes._subplots.AxesSubplot object at 0x7f2fcd33f438>,\n",
+       "       <matplotlib.axes._subplots.AxesSubplot object at 0x7f2fcd2f0860>,\n",
+       "       <matplotlib.axes._subplots.AxesSubplot object at 0x7f2fcd322c88>],\n",
        "      dtype=object)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -58,8 +81,17 @@
     }
    ],
    "source": [
+    "df = pd.read_csv(\"mydata.csv\")\n",
+    "\n",
     "trendLevel(df, 'nox')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
