--- a/examples/calendarPlot.ipynb
+++ b/examples/calendarPlot.ipynb
@@ -1,6 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Calendar Plot\n",
+    "\n",
+    "> Sometimes it is useful to visualise data in a familiar way. Calendars are the obvious way\n",
+    "to represent data for data on the time scale of days or months. The calendarPlot\n",
+    "function provides an effective way to visualise data in this way by showing daily\n",
+    "concentrations laid out in a calendar format. The concentration of a species is shown\n",
+    "by its colour. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Standard libraries to be imported for usage"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -8,6 +28,13 @@
    "source": [
     "import pandas as pd\n",
     "from vayu import calendarPlot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reading the data and using the function from the library."
    ]
   },
   {
