--- a/examples/nbs/timeInteractiveScatterPlot.ipynb
+++ b/examples/nbs/timeInteractiveScatterPlot.ipynb
@@ -152,7 +152,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"delhi_1_5_Aug.csv\")\n",
+    "df = pd.read_csv(\"../data/delhi_1_5_Aug.csv\")\n",
     "df = df.drop(columns = ['city', 'utc', 'parameter', 'unit', 'attribution','country']).dropna()\n",
     "\n",
     "print(df.shape)\n",
@@ -240,7 +240,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
