--- a/examples/nbs/timePlot.ipynb
+++ b/examples/nbs/timePlot.ipynb
@@ -65,7 +65,7 @@
     }
    ],
    "source": [
-    "Reading the data and using the function from the library.mydata = pd.read_csv('mydata.csv')\n",
+    "mydata = pd.read_csv('../data/mydata.csv')\n",
     "print(timePlot(mydata,'2003', 8))"
    ]
   },
@@ -93,7 +93,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
