--- a/examples/nbs/trendLevel.ipynb
+++ b/examples/nbs/trendLevel.ipynb
@@ -81,7 +81,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"mydata.csv\")\n",
+    "df = pd.read_csv(\"../data/mydata.csv\")\n",
     "\n",
     "trendLevel(df, 'nox')"
    ]
@@ -110,7 +110,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
