--- a/examples/nbs/linearRelation.ipynb
+++ b/examples/nbs/linearRelation.ipynb
@@ -66,7 +66,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"mydata.csv\")\n",
+    "df = pd.read_csv(\"../data/mydata.csv\")\n",
     "\n",
     "linearRelation(df, 'nox', 'so2')"
    ]
@@ -95,7 +95,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
