--- a/examples/nbs/smoothTrend.ipynb
+++ b/examples/nbs/smoothTrend.ipynb
@@ -29,7 +29,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"mydata.csv\")\n",
+    "df = pd.read_csv(\"../data/mydata.csv\")\n",
     "smoothTrend(df, 'o3',1)"
    ]
   },
@@ -57,7 +57,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
