--- a/examples/nbs/windRose.ipynb
+++ b/examples/nbs/windRose.ipynb
@@ -57,7 +57,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"mydata.csv\")\n",
+    "df = pd.read_csv(\"../data/mydata.csv\")\n",
     "windRose(df, 'pm25')"
    ]
   },
@@ -85,7 +85,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
