--- a/examples/nbs/interactiveChoroplethPlot.ipynb
+++ b/examples/nbs/interactiveChoroplethPlot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -25,24 +25,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A    Census_2011\n",
-      "A    Census_2011/2011_Dist.dbf\n",
-      "A    Census_2011/2011_Dist.prj\n",
-      "A    Census_2011/2011_Dist.sbn\n",
-      "A    Census_2011/2011_Dist.sbx\n",
-      "A    Census_2011/2011_Dist.shp\n",
-      "A    Census_2011/2011_Dist.shx\n",
-      "Exported revision 77.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# !svn export https://github.com/datameet/maps/trunk/Districts/Census_2011\n",
     "# !mv Census_2011 ../data/Census_2011\n",
@@ -59,12 +44,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!wget \n",
-    "!mv "
+    "# !wget \n",
+    "# !mv "
    ]
   },
   {
@@ -79,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -154,7 +139,7 @@
        "4      Aizawl  POLYGON ((92.98749173520596 24.40452847808963,..."
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -190,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -229,31 +214,31 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>2019-08-20-06:00</td>\n",
        "      <td>8.9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>2019-08-20-07:00</td>\n",
        "      <td>11.6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>2019-08-20-08:00</td>\n",
        "      <td>16.1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>2019-08-20-09:00</td>\n",
        "      <td>15.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>1</td>\n",
        "      <td>2019-08-20-10:00</td>\n",
        "      <td>13.3</td>\n",
@@ -271,15 +256,13 @@
        "4  1  2019-08-20-10:00  13.3"
       ]
      },
-     "execution_count": 11,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 5,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"/content/indiaaq_districtextracts_hourly_avg_pm25.csv\").dropna()\n",
+    "df = pd.read_csv(\"../data/indiaaq_districtextracts_hourly_avg_pm25.csv\").dropna()\n",
     "plot = df\n",
     "\n",
     "df = df.drop(columns = ['pm25'])\n",
@@ -290,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -306,11 +289,11 @@
      "output_type": "stream",
      "text": [
       "   0        time   val    color\n",
-      "0  1  1566280800   8.9  #009600\n",
-      "1  1  1566284400  11.6  #009600\n",
-      "2  1  1566288000  16.1  #009600\n",
-      "3  1  1566291600  15.5  #009600\n",
-      "4  1  1566295200  13.3  #009600\n",
+      "0  1  1566261000   8.9  #009600\n",
+      "1  1  1566264600  11.6  #009600\n",
+      "2  1  1566268200  16.1  #009600\n",
+      "3  1  1566271800  15.5  #009600\n",
+      "4  1  1566275400  13.3  #009600\n",
       "Done for Districts  0  out of 640\n",
       "Done for Districts  20  out of 640\n",
       "Done for Districts  40  out of 640\n",
@@ -354,6 +337,13 @@
     "                              dist_col_name = \"0\", start_date = \"2019-08-20-06:00\", end_date = \"2019-08-24-06:00\", pollutant_ID = 3,\n",
     "                              opacity = 0.4)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
