--- a/examples/nbs/interactiveChoroplethPlot.ipynb
+++ b/examples/nbs/interactiveChoroplethPlot.ipynb
@@ -18,42 +18,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Downloading Shapefile"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# !svn export https://github.com/datameet/maps/trunk/Districts/Census_2011\n",
-    "# !mv Census_2011 ../data/Census_2011\n",
-    "\n",
-    "# We already provide the data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Downloading Pollution Dataframe"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# !wget \n",
-    "# !mv "
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
     "id": "j1unW0l_AG7R"
@@ -64,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -139,7 +103,7 @@
        "4      Aizawl  POLYGON ((92.98749173520596 24.40452847808963,..."
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -157,7 +121,7 @@
     }
    ],
    "source": [
-    "gdf = gpd.read_file(\"../data/Census_2011/2011_Dist.shp\")\n",
+    "gdf = gpd.read_file(\"data/Census_2011/2011_Dist.shp\")\n",
     "gdf = gdf[['DISTRICT', 'geometry']]\n",
     "ax = gdf.plot(figsize=(10, 10))\n",
     "gdf.head()"
@@ -170,12 +134,12 @@
     "id": "r1sQ4KHtnPWg"
    },
    "source": [
-    "## Preparing Dataframe"
+    "##Preparing Dataframe"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -256,13 +220,13 @@
        "4  1  2019-08-20-10:00  13.3"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"../data/indiaaq_districtextracts_hourly_avg_pm25.csv\").dropna()\n",
+    "df = pd.read_csv(\"data/indiaaq_districtextracts_hourly_avg_pm25.csv\").dropna()\n",
     "plot = df\n",
     "\n",
     "df = df.drop(columns = ['pm25'])\n",
@@ -273,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -289,11 +253,11 @@
      "output_type": "stream",
      "text": [
       "   0        time   val    color\n",
-      "0  1  1566261000   8.9  #009600\n",
-      "1  1  1566264600  11.6  #009600\n",
-      "2  1  1566268200  16.1  #009600\n",
-      "3  1  1566271800  15.5  #009600\n",
-      "4  1  1566275400  13.3  #009600\n",
+      "0  1  1566261000   8.9  #00CC00\n",
+      "1  1  1566264600  11.6  #00CC00\n",
+      "2  1  1566268200  16.1  #00CC00\n",
+      "3  1  1566271800  15.5  #00CC00\n",
+      "4  1  1566275400  13.3  #00CC00\n",
       "Done for Districts  0  out of 640\n",
       "Done for Districts  20  out of 640\n",
       "Done for Districts  40  out of 640\n",
@@ -333,8 +297,32 @@
     }
    ],
    "source": [
+    "map_ = interactiveChoroplethPlot(gdf, df, pollutant = 'pm25', country = 'India', date_time_col_name = \"time\", value_col_name = \"val\",\n",
+    "                              dist_col_name = \"0\", start_date = \"2019-08-20-06:00\", end_date = \"2019-08-24-06:00\",\n",
+    "                              opacity = 0.4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "interactiveChoroplethPlot() got an unexpected keyword argument 'pollutant_ID'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-e0cecef889d9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m                               \u001b[0mdist_col_name\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"0\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstart_date\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"2019-08-20-06:00\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m                                 \u001b[0mend_date\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"2019-08-24-06:00\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpollutant_ID\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m                               opacity = 0.4)\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: interactiveChoroplethPlot() got an unexpected keyword argument 'pollutant_ID'"
+     ]
+    }
+   ],
+   "source": [
     "map_ = interactiveChoroplethPlot(gdf, df, date_time_col_name = \"time\", value_col_name = \"val\",\n",
-    "                              dist_col_name = \"0\", start_date = \"2019-08-20-06:00\", end_date = \"2019-08-24-06:00\", pollutant_ID = 3,\n",
+    "                              dist_col_name = \"0\", start_date = \"2019-08-20-06:00\", \n",
+    "                                end_date = \"2019-08-24-06:00\", pollutant_ID = 3,\n",
     "                              opacity = 0.4)"
    ]
   },
