add the notebooks to index

--- a/examples/calendar_plot.ipynb
+++ b/examples/calendar_plot.ipynb
@@ -14,18 +14,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sometimes it is useful to visualise data in a familiar way. Calendars are the obvious way\n",
+    "Sometimes it is useful to visualize data in a familiar way. Calendars are the obvious way\n",
     "to represent data for data on the time scale of days or months. The calendarPlot\n",
-    "function provides an effective way to visualise data in this way by showing daily\n",
+    "function provides an effective way to visualize data in this way by showing daily\n",
     "concentrations laid out in a calendar format. The concentration of a species is shown\n",
-    "by its colour. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Standard libraries to be imported for usage"
+    "by its color. "
    ]
   },
   {
